--- a/test/public/index.html
+++ b/test/public/index.html
@@ -26,7 +26,7 @@
     -->
     <title>Personal Website</title>
   </head>
-  <body>
+  <body class="m-o">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
